--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,20 @@
 
         <variable
             name="vm"
-            type="com.meier.marina.trainme.ui.home.HomeViewModel"/>
+            type="com.meier.marina.trainme.ui.home.HomeViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.meier.marina.trainme.ui.home.HomeActivity">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{v -> vm.addMock()}"
+            android:text="Create mock data"
+            tools:ignore="HardcodedText" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
